<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/resultColorStrip"
            android:layout_width="match_parent"
            android:layout_height="7dp" />

        <TextView
            android:id="@+id/textGroupHeading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:text="Text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textLabel3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="40dp"
                android:text="@string/race_position"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7">

                <TextView
                    android:id="@+id/textPosition"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7">

                    <TextView
                        android:id="@+id/textLabel0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/race_time"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textTotalRaceTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textSize="12sp"
                        tools:text="2:12" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textLabel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="40dp"
                android:text="@string/last_lap"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textLastLap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:textSize="12sp"
                tools:text="0:12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textLabel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:text="@string/best_lap"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7">

                <TextView
                    android:id="@+id/textBestLap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    tools:text="1:15" />

                <TextView
                    android:id="@+id/textPositionByBestLap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/best_lap_position"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>